--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,12 @@
 <style>
+header
+ {   
+background-color: #777;   
+padding: 10px;   
+text-align: center;   
+color: white;
+}
+
 footer
  {   
 background-color: #777;   
@@ -10,7 +18,7 @@ color: white;
 <body>
 <header> <a href="index.html">Home</a>
 </header>
-<footer>
-</footer>
+<footer><p> Copyright &copy; 2020 . All Rights Reserved | By <a href="https://jjtechlover.blogspot.com">JJ Tech</a>
+</p></footer>
 
 </body>
