--- a/footer.html
+++ b/footer.html
@@ -2,18 +2,20 @@
 header
  {   
 background-color: #777;   
-padding: 10px;   
+padding: 10px 0;   
 text-align: center;   
 color: white;
 overflow:hidden;
+position: scrollable;
 }
 
 footer
  {   
 background-color: #777;   
-padding: 10px;   
+padding: 10px 0;   
 text-align: center;   
 color: white;
+position: scrollable;
 }
 </style>
 <body>
