--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,7 @@ text-align: center;
 color: white;
 overflow:hidden;
 position: scrollable;
+top: 0;
 }
 
 footer
@@ -16,6 +17,7 @@ padding: 10px 0;
 text-align: center;   
 color: white;
 position: scrollable;
+bottom: 0;
 }
 </style>
 <body>
