--- a/footer.html
+++ b/footer.html
@@ -6,9 +6,9 @@ padding: 10px 0;
 text-align: center;   
 color: white;
 overflow:hidden;
-position: scrollable;
+position: fixed;
 top: 0;
-size: 10px;
+
 }
 
 footer
@@ -17,13 +17,16 @@ background-color: #777;
 padding: 10px 0;   
 text-align: center;   
 color: white;
-position: scrollable;
+position: fixed;
 bottom: 0;
 }
 </style>
 <body>
 <header> <a href="index.html">Home</a>
 </header>
+<p>d0fy9tc9yc9yctc8t<br>○♤♤○♤○●■\○■》
+<br>rhheheeh<br>hshe
+</p><br>hwheheheh<br>eh3he
 <footer><p> Copyright &copy; 2020 . All Rights Reserved | By <a href="https://jjtechlover.blogspot.com">JJ Tech</a>
 </p></footer>
 
