--- a/footer.html
+++ b/footer.html
@@ -24,9 +24,10 @@ bottom: 0;
 <body>
 <header> <a href="index.html">Home</a>
 </header>
-<p>d0fy9tc9yc9yctc8t<br>○♤♤○♤○●■\○■》
+<h1>
+d0fy9tc9yc9yctc8t<br>○♤♤○♤○●■\○■》
 <br>rhheheeh<br>hshe
-</p><br>hwheheheh<br>eh3he
+<br>hwheheheh<br>eh3he</h1>
 <footer><p> Copyright &copy; 2020 . All Rights Reserved | By <a href="https://jjtechlover.blogspot.com">JJ Tech</a>
 </p></footer>
 
