--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
 header
  {   
 background-color: #777;   
-padding: 10px 0;   
+padding: 10px;   
 text-align: center;   
 color: white;
 overflow:hidden;
@@ -14,7 +14,7 @@ top: 0;
 footer
  {   
 background-color: #777;   
-padding: 10px 0;   
+padding: 10px;   
 text-align: center;   
 color: white;
 position: fixed;
