--- a/footer.html
+++ b/footer.html
@@ -7,6 +7,7 @@ text-align: center;
 color: white;
 overflow:hidden;
 position: fixed;
+top: 0;
 
 
 }
@@ -18,6 +19,7 @@ padding: 10px;
 text-align: center;   
 color: white;
 position: fixed;
+bottom: 0;
 
 }
 </style>
