--- a/footer.html
+++ b/footer.html
@@ -8,6 +8,7 @@ color: white;
 overflow:hidden;
 position: fixed;
 top: 0;
+width: 100%;
 
 
 }
@@ -20,6 +21,7 @@ text-align: center;
 color: white;
 position: fixed;
 bottom: 0;
+width: 100%;
 
 }
 </style>
