--- a/footer.html
+++ b/footer.html
@@ -22,11 +22,27 @@ color: white;
 position: fixed;
 bottom: 0;
 width: 100%;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
+li {
+  display: inline;
 }
 </style>
+
 <body>
-<header> <a href="index.html">Home</a>
+<header>
+ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+
 </header>
 <br>
 <h1>
