--- a/footer.html
+++ b/footer.html
@@ -37,7 +37,7 @@ li {
 <body>
 <header>
 <ul>
-  <li><a href="#home">Home</a></li>
+  <li><a href="home.html" style="color:white;">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="#contact">Contact</a></li>
   <li><a href="#about">About</a></li>
