--- a/footer.html
+++ b/footer.html
@@ -37,10 +37,13 @@ li {
 <body>
 <header>
 <ul>
-  <li><a href="home.html" style="color:white;">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="index.html" style="color:white;">Home&nbsp;</a></li>
+  <li><a href="blog.html" style="color:white;">Blog&nbsp;</a></li>
+  <li><a href="siteinformation/contactus.html" style="color:white;">Contact-Us&nbsp;</a></li>
+  <li><a href="siteinformation/aboutus.html" style="color:white;">About-Us&nbsp;</a></li>
+  <li><a href="siteinformation.html" style="color:white;">Site-Information&nbsp;</a></li>
+  
+  
 </ul>
 
 </header>
