--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,6 @@ background-color: #777;
 padding: 10px;   
 text-align: center;   
 color: white;
-overflow:hidden;
 position: fixed;
 top: 0;
 width: 100%;
@@ -36,17 +35,15 @@ li {
 
 <body>
 <header>
-<h3>
 <ul>
-  <li><a href="index.html" style="color:white;">Home&nbsp;</a></li>
-  <li><a href="blog.html" style="color:white;">Blog&nbsp;</a></li>
-  <li><a href="siteinformation/contactus.html" style="color:white;">Contact-Us&nbsp;</a></li>
-  <li><a href="siteinformation/aboutus.html" style="color:white;">About-Us&nbsp;</a></li>
-  <li><a href="siteinformation.html" style="color:white;">Site-Information&nbsp;</a></li>
+  <li><a href="index.html" style="color:white;"><h3>Home</h3>&nbsp;</a></li>
+  <li><a href="blog.html" style="color:white;"><h3>Blog</h3>&nbsp;</a></li>
+  <li><a href="siteinformation/contactus.html" style="color:white;"><h3>Contact-Us</h3>&nbsp;</a></li>
+  <li><a href="siteinformation/aboutus.html" style="color:white;"><h3>About-Us</h3>&nbsp;</a></li>
+  <li><a href="siteinformation.html" style="color:white;"><h3>Site-Information</h3>&nbsp;</a></li>
   
   
 </ul>
-<h3>
 </header>
 <br>
 <h1>
